# PsyvrseBots

./: .gitignore  .gitmodules  README.md  debug_tokens.py  diagnose_envs.py  embed_conversion_suggestions.json  eventus.db  license.md  main.py  render.yaml  requirements.txt  youtubecookies.txt
.checks/: repo_check.py
Conditor-Bot/: .env  .env.example  .gitignore  README.md  main.py  requirements.txt
Eventus-Bot/: .env  BLUEPRINT.md  README.md  activity.py  db_async.py  eventos.py  eventus.db  eventus_render_mega.py  llm.py  render.yaml  rules.py  start.py  topicai.py  ui_theme.py
Ludus-Bot/: .env  .env.example  .gitignore  DOCUMENTATION_INDEX.md  Dockerfile  FARMING_NEW_FUNCTIONS.py  FETCH_HEAD  README.md  ULTIMATE_MINIGAME_ROADMAP.md  blacklist.json  bot.py  clean_tcg.py  comprehensive_bug_checker.py  comprehensive_check.py  config  config.json  constants.py  economy.json.backup  economy.json.template  index  inventory.json.template  knowledge.json  leaderboard_manager.py  leaderboard_stats.json  ludus_logging.py  migrate_users.py  pets.json  quick_test.py  render.yaml  (+6 more)
Pax-Bot/: .env  .env.example  CrossServer.md  LogGuide.md  README.md  achievements_data.json  chi_data.json  config.env.example  db_schema.sql  db_service.py  delete_slash_commands.py  error_logs.json  gardens_data.json  healing_items_data.json  interaction_views.py  log_config.json  main.py  migrate_to_db.py  potions_data.json  pyproject.toml  quests_data.json  reset_economy.py  run.py  server_config.json  shop_data.json  start.py  teams_data.json  weapons_data.json
Pax-Bot/cogs/: health.py
(+348 files in other folders)
